- Scale: Rouding of scaling ratio to some odd values was fixed.
- Pixmap export: Bad row padding for some BMP image widths was fixed.
- RHK SM4: PRM are imported to metadata.
- IGOR file: Infinities and NaNs in the data are filled with a neutral value
  and masked upon import.
- NanoScan: Files with http://www.nanoscan.ch/SPM namespace are recognised.


2.34 (2013-12-15)
Application:
- It is no longer possible to tear off toolbox submenus.  The tear-off menus
  were removed as they have been broken in Gtk+ for a long time.
- Seldom used functions (Rotate and Unrotate) were replaced with Dimensions
  & units and Arithmetic in the default toolbox.
- Menu ‘Meta’ in the toolbox was renamed to ‘Info’.
- Menu integration support in 64 bit OS X application.
- Settings of 3D view labels are also stored when 3D defaults are saved.
- Translations updated: Czech, French, Italian, Russian.

Libraries:
- libgwyprocess: A function for affine transformation of data fields was added.
- libgwydgets: A function to test sensitivity group membership was added.
- libgwydgets: Pygwy stock icon was added.

Modules:
- Otsu's thresholding (new): Grain marking using Otsu's method.
- Affine distortion (new): Correction of affine distortion by matching image
  and expected lattice vectors.
- Lattice layer (new): Layer allowing selection of a two-dimensional lattice.
- LEXT: Can load colour images; R, G, B are imported as separate channels.
- OLS, LEXT: False colour gradients of colour channels are automatically set to
  RGB-Red, RGB-Green and RGB-Blue.
- Graph cut: Cutting other curves than the first actually works.  Memory leaks
  were fixed.
- Dimensions and Units: If image dimensions change selections are cleared.
- WSF file: All key-value pairs in the file header at placed to metadata.
- NetCDF: Support for multi-layer files was added.
- Volume show and extract: A possible crash was fixed.
- NT-MDT: Support for new spectroscopy frames was added, loading of 4D data